--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Awesome Research Group</b> at <b>Example U</b> does all sorts of
-        research. Here is a place where we tell you exactly what that is!
+        The <b>Legal Informatics and Forensic Science Institute</b> at <b>Hallym University</b> focuses
+        cybercrime and digital forensic investigation research.
     </p>
 </div>
 
