Main RE site updates for people.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Legal Informatics and Forensic Science Institute</b> at <b>Hallym University</b> focuses
-        cybercrime and digital forensic investigation research.
+        The <b>Legal Informatics and Forensic Science Institute</b> at <b>Hallym University</b> focus on quality education, 
+        training and research in Digital Forensic Science, Criminal Justice, and Cyber Law. We take an applied, 
+        multi-disciplinary approach to tackle the newest issues facing cybercrime.
     </p>
 </div>
 
