--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ role-tables:
     <p>
         The <b>Legal Informatics and Forensic Science Institute</b> at <b>Hallym University</b> focus on quality education, 
         training and research in Digital Forensic Science, Criminal Justice, and Cyber Law. We take an applied, 
-        multi-disciplinary approach to tackle the newest issues facing cybercrime.
+        multi-disciplinary approach to tackle the newest issues related to cybercrime.
     </p>
 </div>
 
