fix title and add git to footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: LIFS@Hallym
 notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
