--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: LIFS@Hallym
+title: Home
 notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
