--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Publications
+permalink: /publications
 ---
 <p>
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
