--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ role-tables:
     {% if numposts >= 1 %}
         <p>
             <span class="fa fa-fw fa-history"></span>
-            <a href="{{ site.base }}/blog.html">Older posts&hellip;</a>
+            <a href="{{ site.base }}/blog">Older posts&hellip;</a>
         </p>
     {% endif %}
 </section>
