--- a/pubs/html/2019-Smart_Home_IoT_Forensics.html
+++ b/pubs/html/2019-Smart_Home_IoT_Forensics.html
@@ -1,10 +1,22 @@
 ---
 layout: default
 title: Smart Home IoT Forensics
-permalink: /publications/Smart_Home_IoT_Forensics
+permalink: /publications/2019-Smart_Home_IoT_Forensics
 ---
 <table class="table">
 <tbody>
+    <!-- Metadata for indexing -->
+	<meta name="citation_title" content="Smart Home IoT Forensics">
+	
+		<meta name="citation_author" content="Birhanu, Addisu Afework">
+	
+	<meta name="citation_publication_date" content="2019">
+	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf">
+	
+		<meta name="citation_dissertation_institution" content="Hallym University">
+	
+
+	
 	<tr>
 		<td>
 			<span class="date">
@@ -44,8 +56,7 @@ permalink: /publications/Smart_Home_IoT_Forensics
 			</span>
 			<br />
 			<span class="abstract">
-				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_Birhanu2019').slideToggle('fast');return false;">abstract</button>
-				<div id="abstract_Birhanu2019" class="abstract" style="display: none;">
+				<div id="abstract_Birhanu2019" class="abstract">
 					Smart home Internet of Things (IoT) are becoming the mainstream technologies that are being integrated into today society. Recent cyber-attacks and researches on these devices indicate smart home IoT developers do not design and implement data protection solutions comprehensively in the IoT ecosystem. These security weaknesses have different implications for user privacy, safety and digital forensic investigations. This thesis provides an analysis of data protection methods implemented in smart home IoT devices and how the weaknesses can be applied to digital forensic investigation purposes. In this thesis, we included the analysis of four smart home IoT devices (Sen.se Mother, Naver Clova, SKT Nugu and Xiaomi Smart home) user data protection techniques to identify the vulnerabilities that can be exploited to acquire user data for digital forensic investigation purpose. To achieve the goal, we analyzed data security techniques and cloud data acquisition possibilities for the selected smart home IoT devices. The investigation is conducted using a combination of forensic analysis of companion apps on smartphones, network investigation between the app and cloud, between the device and the cloud and security analysis of cloud APIs used between companion apps and the cloud. From the apps data storage security, we showed that all of the apps do not consider data encryption. As a result, if the databases can be extracted from the smartphone, the stored data can be extracted for forensics purposes. Similarly, except one of the devices&#39; companion app, all the apps do not consider data encryption in the shared preference storage. On the other hand, we identified that some of the devices use one-time session tokens for cloud APIs authorization. Based on the research, we were able to acquire artefacts from smartphones and network investigations without security challenges. Moreover, using those artefacts, we were able to acquire user data from the cloud for three of the devices. While using such kind of vulnerabilities helps digital forensics investigations to acquire user data from smart home IoT ecosystem, they also endanger users&#39; privacy and safety if exploited by hackers.
 				</div>
 			</span>
