--- a/pubs/html/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.html
+++ b/pubs/html/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.html
@@ -7,15 +7,11 @@ permalink: /publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments">
-	
-		<meta name="citation_author" content="Brhan, Yohannes Yemane">
-	
+	<meta name="citation_author" content="Brhan, Yohannes Yemane">
 	<meta name="citation_publication_date" content="2019">
-	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf">
+	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-		<meta name="citation_dissertation_institution" content="Hallym University">
-	
-
+	<meta name=""citation_language"" content="English">
 	
 	<tr>
 		<td>
