--- a/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
+++ b/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
@@ -7,15 +7,11 @@ permalink: /publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria">
-	
-		<meta name="citation_author" content="Bukola, Ajayi Betty">
-	
+	<meta name="citation_author" content="Bukola, Ajayi Betty">
 	<meta name="citation_publication_date" content="2019">
-	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf">
+	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-		<meta name="citation_dissertation_institution" content="Hallym University">
-	
-
+	<meta name=""citation_language"" content="English">
 	
 	<tr>
 		<td>
