--- a/pubs/html/2019-Smart_Home_IoT_Forensics.html
+++ b/pubs/html/2019-Smart_Home_IoT_Forensics.html
@@ -7,15 +7,11 @@ permalink: /publications/2019-Smart_Home_IoT_Forensics
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="Smart Home IoT Forensics">
-	
-		<meta name="citation_author" content="Birhanu, Addisu Afework">
-	
+	<meta name="citation_author" content="Birhanu, Addisu Afework">
 	<meta name="citation_publication_date" content="2019">
-	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf">
+	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-		<meta name="citation_dissertation_institution" content="Hallym University">
-	
-
+	<meta name=""citation_language"" content="English">
 	
 	<tr>
 		<td>
