--- a/pubs/html/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic.html
+++ b/pubs/html/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic.html
@@ -7,15 +7,11 @@ permalink: /publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Study on Internet of Things (IoT) Forensic">
-	
-		<meta name="citation_author" content="Jang, Subong">
-	
+	<meta name="citation_author" content="Jang, Subong">
 	<meta name="citation_publication_date" content="2019">
-	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf">
+	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-		<meta name="citation_dissertation_institution" content="Hallym University">
-	
-
+	<meta name=""citation_language"" content="English">
 	
 	<tr>
 		<td>
