--- a/pubs/html/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.html
+++ b/pubs/html/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.html
@@ -11,7 +11,7 @@ permalink: /publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-	<meta name=""citation_language"" content="English">
+	<meta name="citation_language" content="English">
 	
 	<tr>
 		<td>
