--- a/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
+++ b/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
@@ -11,7 +11,7 @@ permalink: /publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
 	
-	<meta name=""citation_language"" content="English">
+	<meta name="citation_language" content="English">
 	
 	<tr>
 		<td>
