updated publications page

--- a/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
+++ b/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
@@ -10,7 +10,7 @@ permalink: /publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools
 	<meta name="citation_author" content="Ham, Ji Yoon">
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
-	
+	<meta name="citation_language" content="English">
 	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">
 	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">
 	
