--- a/pubs/html/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.html
+++ b/pubs/html/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.html
@@ -10,7 +10,7 @@ permalink: /publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_I
 	<meta name="citation_author" content="Park, Sungmi">
 	<meta name="citation_publication_date" content="2020">
 	<meta name="citation_dissertation_institution" content="Hallym University">
-	
+	<meta name="citation_language" content="English">
 	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf">
 	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf">
 	
