--- a/pubs/html/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices.html
+++ b/pubs/html/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices.html
@@ -10,7 +10,7 @@ permalink: /publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices
 	<meta name="citation_author" content="Park, Minjin">
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
-	
+	<meta name="citation_language" content="English">
 	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">
 	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">
 	
