fixed publications error

--- a/pubs/html/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement.html
+++ b/pubs/html/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement
-permalink: /publications/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement<table class="table">
+permalink: /publications/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement">
 	<meta name="citation_author" content="Park, Sungmi and Akatyev, Nikolay and Jang, Yunsik and Hwang, Jisoo and Kim, Donghyun and Yu, Woonseon and Shin, Hyunwoo and Han, Changhee and Kim, Jonghyun">
 	<meta name="citation_publication_date" content="2018">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/park_ComparativeStudy_2018.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/park_comparativestudy_2018.pdf">
 	
 	<meta name="citation_language" content="en">
 	<meta name="citation_abstract" content="Many data breaches happened due to poor implementation or complete absence of security controls in private companies as well as in government organizations. Many countries work on improvement of security requirements and implementing them in their legislation. However, most of the security frameworks are reactive and do not address relevant threats. The existing research suggests Digital Forensic Readiness as proactive measures, but there is only one example of its implementation as a policy. Our work surveys the current state of data protection legislation in the selected countries and their initiatives for the implementation of Digital Forensic Readiness. Then we discuss if Digital Forensic Readiness as a mandatory requirement can improve data protection state in both public and private sectors, evaluating possible challenges. We contribute suggestions for the adoption of Digital Forensic Readiness as a mandatory requirement for private companies and government organizations.">
@@ -27,7 +29,7 @@ permalink: /publications/2018-A_Comparative_Study_on_Data_Protection_Legislation
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_ComparativeStudy_2018.pdf">A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_comparativestudy_2018.pdf">A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement</a>.
 			</span><br />
 			<span class="authors">
 				Park, Sungmi and Akatyev, Nikolay and Jang, Yunsik and Hwang, Jisoo and Kim, Donghyun and Yu, Woonseon and Shin, Hyunwoo and Han, Changhee and Kim, Jonghyun.
