--- a/pubs/html/2019-Preliminary_Study_of_a_Google_Home_Mini.html
+++ b/pubs/html/2019-Preliminary_Study_of_a_Google_Home_Mini.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:Preliminary Study of a Google Home Mini
-permalink: /publications/2019-Preliminary_Study_of_a_Google_Home_Mini<table class="table">
+permalink: /publications/2019-Preliminary_Study_of_a_Google_Home_Mini
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="Preliminary Study of a Google Home Mini">
 	<meta name="citation_author" content="Park, Minjin and James, Joshua I.">
 	<meta name="citation_publication_date" content="2019">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/park_PreliminaryStudy_2019.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/park_preliminarystudy_2019.pdf">
 	
 	<meta name="citation_language" content="en">
 	<meta name="citation_abstract" content="Many artificial intelligence (AI) speakers have recently come to market. Beginning with Amazon Echo, many companies producing their own speaker technologies. Due to the limitations of technology, most speakers have similar functions, but the way of handling the data of each speaker is different. In the case of Amazon echo, the API of the cloud is open for any developers to develop their API. The Amazon Echo has been around for a while, and much research has been done on it. However, not much research has been done on Google Home Mini analysis for digital investigations. In this paper, we will conduct some initial research on the data storing and security methods of Google Home Mini.">
@@ -27,7 +29,7 @@ permalink: /publications/2019-Preliminary_Study_of_a_Google_Home_Mini<table clas
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_PreliminaryStudy_2019.pdf">Preliminary Study of a Google Home Mini</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_preliminarystudy_2019.pdf">Preliminary Study of a Google Home Mini</a>.
 			</span><br />
 			<span class="authors">
 				Park, Minjin and James, Joshua I..
