--- a/pubs/html/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection.html
+++ b/pubs/html/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection
-permalink: /publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection<table class="table">
+permalink: /publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection">
 	<meta name="citation_author" content="Park, Sungmi and Ahn, Jung Mihn Jamie">
 	<meta name="citation_publication_date" content="2022">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/park_StudyUtilization_2022.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/park_studyutilization_2022.pdf">
 	
 	<meta name="citation_language" content="ko">
 	<meta name="citation_abstract" content="As the interest in big data and artificial intelligence(AI) grows, the field of "Smart Policing" has received increased attention. However, the information collected during the criminal justice process inevitably contains a lot of personal information, and thus its usage for machine learning datasets is limited. The Korean Personal Data Protection Laws have recently adopted major amendments to free up the use of pseudonymized data and ease the way for the expansion of Big Data-driven services. Contrary to this, the strict privacy protection compliance by the police remains the same - causing passive usage of the Criminal Justice Information. This study seeks ways to utilize data on the Korea Information System of Criminal Justice Services(KICS), an electronic work system that the police and three other criminal agencies jointly use to perform investigations. The National Police Agency is implementing various R\&D tasks to converge high-tech and public security sites. However, it is having difficulties providing this usable Criminal Justice Information due to the strict interpretation and application of vague legal provisions. By examining the Criminal Justice Information produced during the criminal justice process and the current status of domestic and overseas use of criminal justice information, this study finds and suggests alternative solutions such as data classification, data-oriented personal information policy, and ways to establish a privacy-compliant environment as countermeasures to pursue both privacy protection and innovative policing development.">
@@ -27,7 +29,7 @@ permalink: /publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Informa
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_StudyUtilization_2022.pdf">A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studyutilization_2022.pdf">A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection</a>.
 			</span><br />
 			<span class="authors">
 				Park, Sungmi and Ahn, Jung Mihn Jamie.
