--- a/pubs/html/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software.html
+++ b/pubs/html/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:A Feature Comparison of Modern Digital Forensic Imaging Software
-permalink: /publications/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software<table class="table">
+permalink: /publications/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Feature Comparison of Modern Digital Forensic Imaging Software">
 	<meta name="citation_author" content="Ham, Jiyoon and James, Joshua">
 	<meta name="citation_publication_date" content="2019">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/ham_FeatureComparison_2019.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/ham_featurecomparison_2019.pdf">
 	
 	<meta name="citation_language" content="en">
 	<meta name="citation_abstract" content="Abstract Fundamental processes in digital forensic investigation such as disk imaging were developed when digital investigation was relatively young. As digital forensic processes and procedures matured, www.earticle.net these fundamental tools, that are the pillars of the reset of the data processing and analysis phases of an investigation, largely stayed the same. This work is a study of modern digital forensic imaging software tools. Specifically, we will examine the feature sets of modern digital forensic imaging tools, as well as their development and release cycles to understand patterns of fundamental tool development. Based on this survey, we show the weakness in current digital investigation fundamental software development and maintenance over time. We also provide recommendations on how to improve fundamental tools.">
@@ -27,7 +29,7 @@ permalink: /publications/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Im
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/ham_FeatureComparison_2019.pdf">A Feature Comparison of Modern Digital Forensic Imaging Software</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/ham_featurecomparison_2019.pdf">A Feature Comparison of Modern Digital Forensic Imaging Software</a>.
 			</span><br />
 			<span class="authors">
 				Ham, Jiyoon and James, Joshua.
