--- a/pubs/html/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization.html
+++ b/pubs/html/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:A Study on Implementing a Criminal Investigation Verification Model Using Visualization
-permalink: /publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization<table class="table">
+permalink: /publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Study on Implementing a Criminal Investigation Verification Model Using Visualization">
 	<meta name="citation_author" content="Park, Roseop and Kim, Jion and Kim, Changsik and Park, Sungmi">
 	<meta name="citation_publication_date" content="2020">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/park_StudyImplementing_2020.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/park_studyimplementing_2020.pdf">
 	
 	<meta name="citation_language" content="ko">
 	<meta name="citation_abstract" content="With the recent revision of the Criminal Procedure Act and the Prosecutors' Office Act, the Korean police have been able to conduct responsible investigations, such as exercising their investigative powers as the primary investigative agency and the right to end the investigation when there is no criminal charge. However, if a suspect or a victim challenges the validity of the investigation, the case is sent to the prosecution. In such cases, the objectivity of the investigation is directly relevant to the credibility of the investigation. Also, as the admissibility of the prosecution's suspect interrogation records as evidence became limited, lawyers are likely to attack logical vulnerabilities in the argument structure of the investigation results at the trial. Therefore, the police must develop a method to secure the validity of the investigation results objectively. This study systematically analyzes the reasoning methods used in criminal investigations and their issues to proactively respond to changes in the environment of criminal proceedings. It also suggests the necessity of introducing a new paradigm that divides the police investigation process into Crime Reconstruction and Crime Verification. Further, the study introduces visualization as a verification method to improve the crime verification process before forwarding the case to the prosecution. Proving one's innocence or guilt in court relies on the ability of the general judge or civil judge to follow the logic and evidence presented. Therefore, it is necessary to present the results of crime reasoning in a way the general public can understand easily, and one of the most effective methods is to visualize the investigation process. Investigation reasoning and verification based on the visualization verification model can prevent or prepare for counterattacks or logical attacks by lawyers, improving the overall police investigation, and ensure the court fully recognizes that police investigation results. Also, event verification through visualization can be an effective means of preparing for the future testimony of investigators. A systematic and standardized verification system for investigation results can develop to an AI-based investigation verification program that can verify all events in the future.">
@@ -27,7 +29,7 @@ permalink: /publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_V
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_StudyImplementing_2020.pdf">A Study on Implementing a Criminal Investigation Verification Model Using Visualization</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studyimplementing_2020.pdf">A Study on Implementing a Criminal Investigation Verification Model Using Visualization</a>.
 			</span><br />
 			<span class="authors">
 				Park, Roseop and Kim, Jion and Kim, Changsik and Park, Sungmi.
