--- a/pubs/html/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction.html
+++ b/pubs/html/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction.html
@@ -1,14 +1,16 @@
 ---
 layout:default
 title:A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction
-permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction<table class="table">
+permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction
+---
+<table class="table">
 <tbody>
     <!-- Metadata for indexing -->
 	<meta name="citation_title" content="A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction">
 	<meta name="citation_author" content="Lee, Yuna and Park, Sungmi and Park, Roseop">
 	<meta name="citation_publication_date" content="2022">
 	
-	<meta name="citation_public_url" content="https://lifs.ac.kr/pubs/lee_StudyElements_2022.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/lee_studyelements_2022.pdf">
 	
 	<meta name="citation_language" content="ko">
 	<meta name="citation_abstract" content="Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing.  Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.">
@@ -27,7 +29,7 @@ permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/lee_StudyElements_2022.pdf">A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/lee_studyelements_2022.pdf">A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction</a>.
 			</span><br />
 			<span class="authors">
 				Lee, Yuna and Park, Sungmi and Park, Roseop.
