--- a/pubs/html/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization.html
+++ b/pubs/html/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization.html
@@ -34,7 +34,7 @@ permalink: /publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_V
 			<span class="authors">
 				Park, Roseop and Kim, Jion and Kim, Changsik and Park, Sungmi.
 			</span><br />
-			<span class="venuetype"></span><span class="venue">Journal of Police \& Law 18(2)</span>.
+			<span class="venuetype"></span><span class="venue">Journal of Police and Law 18(2)</span>.
 			<br />
 			<span class="keywords">
 				
