fixed links between people and publications

--- a/pubs/html/2019-A_Study_on_Internet_of_Things_IoT_Forensic.html
+++ b/pubs/html/2019-A_Study_on_Internet_of_Things_IoT_Forensic.html
@@ -6,7 +6,7 @@ permalink: /publications/2019-A_Study_on_Internet_of_Things_IoT_Forensic
 <table class="table">
 <tbody>
     <!-- Metadata for indexing -->
-	<meta name="citation_title" content="A Study on Internet of Things (IoT) Forensic">
+	<meta name="citation_title" content="A Study on Internet of Things IoT Forensic">
 	<meta name="citation_author" content="Jang, Subong">
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
@@ -28,7 +28,7 @@ permalink: /publications/2019-A_Study_on_Internet_of_Things_IoT_Forensic
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things IoT Forensic</a>.
 			</span><br />
 			<span class="authors">
 				Jang, Subong.
