--- a/pubs/html/2021-The_Online_Access_to_Judgment_Service_in_Korea_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AIArtificial_Intelligence.html
+++ b/pubs/html/2021-The_Online_Access_to_Judgment_Service_in_Korea_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AIArtificial_Intelligence.html
@@ -6,7 +6,7 @@ permalink: /publications/2021-The_Online_Access_to_Judgment_Service_in_Korea_A_S
 <table class="table">
 <tbody>
     <!-- Metadata for indexing -->
-	<meta name="citation_title" content="The 'Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)">
+	<meta name="citation_title" content="The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AIArtificial Intelligence">
 	<meta name="citation_author" content="Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie">
 	<meta name="citation_publication_date" content="2021">
 	
@@ -29,7 +29,7 @@ permalink: /publications/2021-The_Online_Access_to_Judgment_Service_in_Korea_A_S
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The 'Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AIArtificial Intelligence</a>.
 			</span><br />
 			<span class="authors">
 				Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie.
