--- a/pubs/html/2019-Preliminary_Study_of_a_Google_Home_Mini.html
+++ b/pubs/html/2019-Preliminary_Study_of_a_Google_Home_Mini.html
@@ -38,6 +38,7 @@ permalink: /publications/2019-Preliminary_Study_of_a_Google_Home_Mini
 			<br />
 			<span class="keywords">
 				
+						<span class="badge badge-info">⛔ No DOI found</span>
 						<span class="badge badge-info">Digital forensic investigation</span>
 						<span class="badge badge-info">Google Home Mini</span>
 						<span class="badge badge-info">IoT</span>
