--- a/pubs/html/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection.html
+++ b/pubs/html/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection.html
@@ -38,6 +38,7 @@ permalink: /publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Informa
 			<br />
 			<span class="keywords">
 				
+						<span class="badge badge-info">⛔ No DOI found</span>
 						<span class="badge badge-info">criminal justice information</span>
 						<span class="badge badge-info">de-identification</span>
 						<span class="badge badge-info">personal information</span>
