--- a/pubs/html/2019-A_2018_Samsung_Smart_TV_Data_Acquisition_Method_Analysis.html
+++ b/pubs/html/2019-A_2018_Samsung_Smart_TV_Data_Acquisition_Method_Analysis.html
@@ -38,6 +38,7 @@ permalink: /publications/2019-A_2018_Samsung_Smart_TV_Data_Acquisition_Method_An
 			<br />
 			<span class="keywords">
 				
+						<span class="badge badge-info">⛔ No DOI found</span>
 						<span class="badge badge-info">IoT Analysis</span>
 						<span class="badge badge-info">Samsung TV</span>
 						<span class="badge badge-info">Smart TV</span>
