--- a/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
+++ b/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
@@ -10,8 +10,8 @@ permalink: /publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools
 	<meta name="citation_author" content="Ham, Ji Yoon">
 	<meta name="citation_publication_date" content="2019">
 	<meta name="citation_dissertation_institution" content="Hallym University">
-	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/ham_studydigitalforensic_2019.pdf">
-	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/ham_studydigitalforensic_2019.pdf">
+	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/ham_studydigital_2019.pdf">
+	<meta name="citation_pdf_url" content="https://lifs.hallym.ac.kr/pubs/ham_studydigital_2019.pdf">
 	<meta name="citation_language" content="en">
 	<meta name="citation_abstract" content="Digital forensic Imaging is vital in digital forensic investigation process. As time changes, the number of digital devices increase in the forensic imaging filed and the spec of digital devices gets advance. However, the imaging methods and procedure have largely stayed the same. The most hard and important point of improving the digital forensic acquisition tool is that it should be fast and forensically sound. Moreover, it should supportthe features that other forensic acquisition on market. While maintain this point, this paper will develop and improve the digital forensic tool by adding more features through survey.">
 	
@@ -29,12 +29,12 @@ permalink: /publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/ham_studydigitalforensic_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/ham_studydigital_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
 			</span><br />
 			<span class="authors">
 				Ham, Ji Yoon.
 			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
