--- a/pubs/html/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction.html
+++ b/pubs/html/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction.html
@@ -13,7 +13,7 @@ permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing
 	<meta name="citation_public_url" content="https://lifs.hallym.ac.kr/pubs/lee_studyelements_2022.pdf">
 	
 	<meta name="citation_language" content="ko">
-	<meta name="citation_abstract" content="Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing.  Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.">
+	<meta name="citation_abstract" content="Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing. Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.">
 	
 	<tr>
 		<td>
@@ -38,6 +38,7 @@ permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing
 			<br />
 			<span class="keywords">
 				
+						<span class="badge badge-info">⛔ No DOI found</span>
 						<span class="badge badge-info">Crime Domain Text</span>
 						<span class="badge badge-info">Crime Investigation</span>
 						<span class="badge badge-info">Event extraction</span>
@@ -47,7 +48,7 @@ permalink: /publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing
 			<br />
 			<span class="abstract">
 				<div id="abstract_" class="abstract" style="text-align: justify; text-justify: inter-word;">
-					Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing.  Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.
+					Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing. Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.
 				</div>
 			</span>
 		</td>
