fixed master thesis error

--- a/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
+++ b/pubs/html/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.html
@@ -34,7 +34,7 @@ permalink: /publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools
 			<span class="authors">
 				Ham, Ji Yoon.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
