--- a/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
+++ b/pubs/html/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria.html
@@ -34,7 +34,7 @@ permalink: /publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime
 			<span class="authors">
 				Bukola, Ajayi Betty.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
