--- a/pubs/html/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices.html
+++ b/pubs/html/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices.html
@@ -34,7 +34,7 @@ permalink: /publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices
 			<span class="authors">
 				Park, Minjin.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
