--- a/pubs/html/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.html
+++ b/pubs/html/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.html
@@ -34,7 +34,7 @@ permalink: /publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_I
 			<span class="authors">
 				Park, Sungmi.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
