--- a/pubs/html/2019-Smart_Home_IoT_Forensics.html
+++ b/pubs/html/2019-Smart_Home_IoT_Forensics.html
@@ -34,7 +34,7 @@ permalink: /publications/2019-Smart_Home_IoT_Forensics
 			<span class="authors">
 				Birhanu, Addisu Afework.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			<span class="keywords">
 				
